<resources>
    <string name="app_name">AlpHa</string>
    <string name="title_news">News</string>
    <string name="title_ranking">Ranking</string>
    <string name="title_games">Games</string>
    <string name="title_sponsors">Sponsors</string>
    <string name="title_rules">Rules</string>
    <string name="plus">+</string>
    <string name="negative">-</string>
    <string name="points">Points</string>
    <string name="rule">Rule&#160;</string>
    <string name="team">Team</string>
    <string name="updated">updated</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="logosponsor">LogoSponsor</string>
    <string name="date">Date:</string>
    <string name="hour">Hour:</string>
    <string name="field">Field:</string>
    <string name="selecciona_tu_torneo">Selecciona tu torneo</string>
    <string name="domingo">Domingo</string>
    <string name="s_bado">Sábado</string>
</resources>