<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_ranking"
        android:icon="@drawable/ic_ranking_black_24dp"
        android:title="@string/title_ranking" />

    <item
        android:id="@+id/navigation_games"
        android:icon="@drawable/ic_games_black_24dp"
        android:title="@string/title_games" />

    <item
        android:id="@+id/navigation_sponsors"
        android:icon="@drawable/ic_sponsors_black_24dp"
        android:title="@string/title_sponsors" />

    <item
        android:id="@+id/navigation_rules"
        android:icon="@drawable/ic_rules_black_24dp"
        android:title="@string/title_rules" />

</menu>