<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_news">

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.flimflo.alpha.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_ranking"
        android:name="com.flimflo.alpha.ui.ranking.RankingFragment"
        android:label="@string/title_ranking"
        tools:layout="@layout/fragment_ranking" />

    <fragment
        android:id="@+id/navigation_games"
        android:name="com.flimflo.alpha.ui.games.GamesFragment"
        android:label="@string/title_games"
        tools:layout="@layout/fragment_games" />

    <fragment
        android:id="@+id/navigation_sponsors"
        android:name="com.flimflo.alpha.ui.sponsors.SponsorsFragment"
        android:label="@string/title_sponsors"
        tools:layout="@layout/fragment_sponsors" />

    <fragment
        android:id="@+id/navigation_rules"
        android:name="com.flimflo.alpha.ui.rules.RulesFragment"
        android:label="@string/title_rules"
        tools:layout="@layout/fragment_rules" />
</navigation>