<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="20dp">


    <ImageView
        android:id="@+id/imgViewSponsor"
        android:layout_width="331dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/logosponsor"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtDatosCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtDir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/address"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtDatosDir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>